update about page to include extension

--- a/src/app/pages/about-page/about-page.component.html
+++ b/src/app/pages/about-page/about-page.component.html
@@ -1,22 +1,20 @@
-
 <div class="main" fxLayout="row" fxLayoutAlign="center center">
   <div fxFlex="80">
-    <img ngClass.gt-xs="float_right" ngClass.lt-sm="align_center" src="assets/images/logo2.png" alt="Qualweb logo"/>
+    <img ngClass.gt-xs="float_right" ngClass.lt-sm="align_center" src="assets/images/logo2.png" alt="Qualweb logo" />
 
     <hr class="combo_breaker">
     <h2>{{ 'ABOUT_PAGE.title_about' | translate }}</h2>
     <p>{{ 'ABOUT_PAGE.about_1' | translate }}</p>
     <p>
       {{ 'ABOUT_PAGE.about_2' | translate }}
-      <a href="https://www.w3.org/WAI/WCAG21/Techniques/" target="_blank">{{ 'ABOUT_PAGE.about_wcag' | translate }}</a>
-      {{ 'ABOUT_PAGE.about_and' | translate }}
+      <a href="https://www.w3.org/WAI/WCAG21/Techniques/" target="_blank">{{ 'ABOUT_PAGE.about_wcag' | translate }}</a> {{ 'ABOUT_PAGE.about_and' | translate }}
       <a href="https://act-rules.github.io/pages/about" target="_blank">{{ 'ABOUT_PAGE.about_act' | translate }}</a>.
     </p>
     <p>{{ 'ABOUT_PAGE.about_3' | translate }}</p>
     <p>{{ 'ABOUT_PAGE.about_4' | translate }}
-      <a href="https://github.com/qualweb" target="_blank">https://github.com/qualweb</a>.
-      {{ 'ABOUT_PAGE.about_5' | translate }}
+      <a href="https://github.com/qualweb" target="_blank">https://github.com/qualweb</a>. {{ 'ABOUT_PAGE.about_5' | translate }}
       <a href="https://github.com/qualweb/cli" target="_blank">{{ 'ABOUT_PAGE.about_cli' | translate }}</a>{{'ABOUT_PAGE.about_6' | translate}}
+      <a href="https://chrome.google.com/webstore/detail/qualweb-extension/ljgilomdnehokancdcbkmbndkkiggioc" target="_blank">{{ 'ABOUT_PAGE.about_extension' | translate }}</a>{{'ABOUT_PAGE.about_7' | translate}}
     </p>
     <p>{{ 'ABOUT_PAGE.about_projects' | translate }}</p>
     <ul>
@@ -41,10 +39,8 @@
     <h2>{{ 'ABOUT_PAGE.title_accessibility' | translate }}</h2>
     <p>
       {{ 'ABOUT_PAGE.access_1' | translate }}
-      <a href="https://www.w3.org/TR/WCAG21/" target="_blank">{{ 'ABOUT_PAGE.access_wcag' | translate }}</a>
-      {{ 'ABOUT_PAGE.access_2' | translate }}
-      <a href="mailto:qualweb@fc.ul.pt">{{ 'ABOUT_PAGE.access_email' | translate }}</a>
-      {{ 'ABOUT_PAGE.access_3' | translate }}
+      <a href="https://www.w3.org/TR/WCAG21/" target="_blank">{{ 'ABOUT_PAGE.access_wcag' | translate }}</a> {{ 'ABOUT_PAGE.access_2' | translate }}
+      <a href="mailto:qualweb@fc.ul.pt">{{ 'ABOUT_PAGE.access_email' | translate }}</a> {{ 'ABOUT_PAGE.access_3' | translate }}
     </p>
     <h3>{{ 'ABOUT_PAGE.access_features' | translate }}</h3>
     <ul>
