update about page

--- a/src/app/pages/about-page/about-page.component.html
+++ b/src/app/pages/about-page/about-page.component.html
@@ -15,6 +15,7 @@
       <a href="https://github.com/qualweb" target="_blank">https://github.com/qualweb</a>. {{ 'ABOUT_PAGE.about_5' | translate }}
       <a href="https://github.com/qualweb/cli" target="_blank">{{ 'ABOUT_PAGE.about_cli' | translate }}</a>{{'ABOUT_PAGE.about_6' | translate}}
       <a href="https://chrome.google.com/webstore/detail/qualweb-extension/ljgilomdnehokancdcbkmbndkkiggioc" target="_blank">{{ 'ABOUT_PAGE.about_extension' | translate }}</a>{{'ABOUT_PAGE.about_7' | translate}}
+      <a href="https://github.com/qualweb/core" target="_blank">{{ 'ABOUT_PAGE.about_core' | translate }}</a>{{'ABOUT_PAGE.about_8' | translate}}
     </p>
     <p>{{ 'ABOUT_PAGE.about_projects' | translate }}</p>
     <ul>
