Updated to Angular 13

--- a/src/app/pages/evaluation-page/evaluation-page.component.scss
+++ b/src/app/pages/evaluation-page/evaluation-page.component.scss
@@ -1,6 +1,6 @@
-@import '../../../assets/bootstrap/bootstrap.css';
+//@import '../../../assets/bootstrap/bootstrap.css';
 @import '../../../assets/bootstrap/bootstrap.min.css';
-@import '../../../assets/bootstrap/bootstrap-theme.css';
+//@import '../../../assets/bootstrap/bootstrap-theme.css';
 @import '../../../assets/bootstrap/bootstrap-theme.min.css';
 
 $passed: #46f73f;
