--- a/src/app/themes.scss
+++ b/src/app/themes.scss
@@ -1,18 +1,18 @@
-@import '~@angular/material/theming';
-@include mat-core();
+@use '@angular/material' as mat;
+@include mat.core();
 
 .light-theme {
-  $light-primary: mat-palette($mat-deep-orange, 800);
-  $light-accent: mat-palette($mat-grey, 100);
-  $light-theme: mat-light-theme($light-primary, $light-accent);
-  @include angular-material-theme($light-theme);
+  $light-primary: mat.define-palette(mat.$deep-orange-palette, 800);
+  $light-accent: mat.define-palette(mat.$grey-palette, 100);
+  $light-theme: mat.define-light-theme($light-primary, $light-accent);
+  @include mat.all-component-themes($light-theme);
   background-color: #989898 !important;
 }
 
 .dark-theme {
-  $dark-primary: mat-palette($mat-deep-orange, 600);
-  $dark-accent: mat-palette($mat-grey, 200);
-  $dark-theme: mat-dark-theme($dark-primary, $dark-accent);
-  @include angular-material-theme($dark-theme);
+  $dark-primary: mat.define-palette(mat.$deep-orange-palette, 600);
+  $dark-accent: mat.define-palette(mat.$grey-palette, 200);
+  $dark-theme: mat.define-dark-theme($dark-primary, $dark-accent);
+  @include mat.all-component-themes($dark-theme);
   background-color: #232323 !important;
 }
