add check box to see rules without conformance level

--- a/src/app/pages/evaluation-page/evaluation-page.component.html
+++ b/src/app/pages/evaluation-page/evaluation-page.component.html
@@ -149,6 +149,10 @@
                 <mat-checkbox [(ngModel)]="showAAA"
                               (click)="$event.stopPropagation()">AAA
                 </mat-checkbox>
+                <mat-checkbox [(ngModel)]="showBeyond"
+                              (click)="$event.stopPropagation()">Rules beyond WCAG
+                </mat-checkbox>
+
               </div>
             </div>
           </div>
