--- a/src/app/pages/evaluation-page/evaluation-page.component.html
+++ b/src/app/pages/evaluation-page/evaluation-page.component.html
@@ -386,8 +386,8 @@
                         <span *ngSwitchDefault> {{"EVALUATION_PAGE.filters.results" | translate}}</span>
                       </ng-container>
                     </h3>
-                    <div [class.results_box]="rule['numbers'][res[1]] > 3">
-                      <ng-container *ngFor="let test of rule[res[3]]; trackBy: trackByIndex">
+                    <cdk-virtual-scroll-viewport itemSize="50" class="viewport" [class.results_box]="rule['numbers'][res[1]] > 3">
+                      <ng-container *cdkVirtualFor="let test of rule[res[3]]; trackBy: trackByIndex">
                         <mat-card [ngClass]="test.verdict" fxLayout="column" class="line_breaker">
                           <mat-card-header>
                             <mat-card-title [class.with-code]="test.elements || test.htmlCode">
@@ -407,7 +407,7 @@
                               <div *ngIf="test.elements !== undefined" fxLayout="column" class="act_code_block">
                                 <div *ngFor="let elem of test.elements" fxLayout="column" class="act_code_element">
                                   <div class="code_block">
-                                    <pre fxFlex="95" fxFlex.lt-md="90"><code tabindex="0" [highlight]="elem.htmlCode.toString()"></code></pre>
+                                     <pre fxFlex="95" fxFlex.lt-md="90"><code tabindex="0" [highlight]="elem.htmlCode.toString()"></code></pre>
                                     <button mat-icon-button fxFlex (click)="openCodeDialog(elem.htmlCode)"
                                             matTooltip="{{'EVALUATION_PAGE.report.result_code' | translate}}" aria-label="Open code dialog button">
                                       <mat-icon class="eyeicon" aria-hidden="true">visibility</mat-icon>
@@ -433,7 +433,7 @@
                           </mat-card-content>
                         </mat-card>
                       </ng-container>
-                    </div>
+                    </cdk-virtual-scroll-viewport>
                   </ng-container>
                 </div>
 
