--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,7 +2,7 @@
 @use '@angular/material' as mat;
 
 @import 'app/themes.scss';
-@import url('https://fonts.googleapis.com/css?family=Open+Sans|Oswald|Roboto|Rubik|Raleway&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans|Josefine+Sans|Oswald|Roboto|Rubik|Raleway&display=swap');
 @import '~highlight.js/styles/github.css';
 
 // Be sure that you only ever include 'mat-core' mixin once!
@@ -97,6 +97,6 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Oswald', sans-serif;
+  font-family: 'Josefine Sans', sans-serif;
   text-transform: uppercase;
 }
