Annouce conclusion of evaluation to screen reader users

--- a/src/app/evaluation/url-input/url-input.component.scss
+++ b/src/app/evaluation/url-input/url-input.component.scss
@@ -105,15 +105,15 @@
 }
 
 h1 {
-  font-size: 2em;
+  font-size: 2.5em;
 }
 
 h1, h2 {
   margin-bottom: 0;
 }
 
-h3 {
-  margin-top: 0 !important;
+h2 {
+  margin-top: 50px;
 }
 
 .subtitle{
